--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap");
+
+@layer base {
+  body {
+    @apply font-[Poppins];
+  }
+  li {
+    @apply px-4;
+    @apply cursor-pointer;
+  }
+
+  .active {
+    border-bottom: 3px solid #c7a003;
+    transition: border-bottom 0.15s;
+  }
+  .homeIcon{
+    font-size: 40px;
+    color: #c7a003;
+    transition: font-size 0.15s;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
 }
